force-app/main/default/objects/POC_Return_Item__c/POC_Return_Item__c.object-meta.xml
<CustomObject>
    <label>POC Return Item</label>
    <nameField>
        <label>POC Return Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC Return Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>