force-app/main/default/objects/POC_Return_Item__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>POC Return Items</relationshipLabel>
    <relationshipName>POC_Return_Items</relationshipName>
    <type>Lookup</type>
</CustomField>