force-app/main/default/objects/POC_Return_Item__c/fields/complete_a_SD_Reset__c.field-meta.xml
<CustomField>
    <fullName>complete_a_SD_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete an SD Reset</label>
    <type>Checkbox</type>
</CustomField>