force-app/main/default/objects/POC_Return_Item__c/fields/Damage_Details__c.field-meta.xml
<CustomField>
    <fullName>Damage_Details__c</fullName>
    <label>Damage Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>