force-app/main/default/objects/POC_Return_Item__c/fields/Damage_Reported_by_the_customer__c.field-meta.xml
<CustomField>
    <fullName>Damage_Reported_by_the_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Damage Reported by the customer</label>
    <type>Checkbox</type>
</CustomField>