force-app/main/default/objects/POC_Return_Item__c/fields/Data_Erase_Requested__c.field-meta.xml
<CustomField>
    <fullName>Data_Erase_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require a secure erase</label>
    <type>Checkbox</type>
</CustomField>