force-app/main/default/objects/POC_Return_Item__c/fields/Original_Packaging_Available__c.field-meta.xml
<CustomField>
    <fullName>Original_Packaging_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you have the original packaging?</description>
    <inlineHelpText>Do you have the original packaging?</inlineHelpText>
    <label>Original Packaging Available</label>
    <type>Checkbox</type>
</CustomField>