force-app/main/default/objects/POC_Return_Item__c/fields/POC_Return__c.field-meta.xml
<CustomField>
    <fullName>POC_Return__c</fullName>
    <label>POC Return</label>
    <referenceTo>POC_Return__c</referenceTo>
    <relationshipLabel>POC Return Items</relationshipLabel>
    <relationshipName>POC_Return_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>