force-app/main/default/objects/POC_Return_Item__c/validationRules/Damage_details_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Damage_details_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>Damage_Reported_by_the_customer__c &amp;&amp; ISBLANK (Damage_Details__c)</errorConditionFormula>
    <errorMessage>Please fill the damage details</errorMessage>
</ValidationRule>